# mcp-server

./: README.md  config.py  config.yaml  mcp-cli.py  pyproject.toml  requirements.txt  server.py  start-chat.sh
core/: config.py  logging_config.py  resources.py
resources/: Accessing job logs in HKube.md  Accessing_job_logs_in_HKube.md  HKube.md  assistant_instructions.md  get_job_or_task_id_logs.md  how_to_get_logs.md
tools/: __init__.py  algorithms.py  instructions.py  jobs.py  pipelines.py  resources_tools.py
utils/: __init__.py  get_endpoint.py  response_utils.py
